cloud/local/development/sso/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-sso-deployment
  namespace: sso
  labels:
    app: keycloak-sso
spec:
  selector:
    matchLabels:
      app: keycloak-sso
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-sso
    spec:
      containers:
        - name: keycloak-sso-container
          args: [ start-dev ]
          image: quay.io/keycloak/keycloak:26.2.5
          ports:
            - containerPort: 8080
