cloud/local/development/sso/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: sso
spec:
  containers:
    - name: test-image
      image: curlimages/curl
      command: [ "sh", "-c" ]
      args: [ 'sleep infinity' ]
  restartPolicy: Never
