cloud/local/development/sso/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: sso
spec:
  type: ExternalName
  externalName: postgres-service.database.svc.cluster.local
