cloud/local/development/sso/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-sso-service
  namespace: sso
spec:
  selector:
    app: keycloak-sso
  ports:
    - port: 80
      targetPort: 8080
