cloud/local/development/sso/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-sso-ingres
  namespace: sso
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "32k"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /sso(/|$)(.*)
            backend:
              service:
                name: keycloak-sso-service
                port:
                  number: 80
